fixed white space at top of webpage

--- a/css/Search.css
+++ b/css/Search.css
@@ -1,3 +1,6 @@
+header p{
+  margin: 0;
+}
 body {
   height: 100vh;
   margin: 0;
